--- a/GeoradarGui/GeoradarGui.csproj
+++ b/GeoradarGui/GeoradarGui.csproj
@@ -15,7 +15,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
-    <PublishUrl>C:\work\Georadar\firmware\prototype\publish\</PublishUrl>
+    <PublishUrl>D:\work\georadar\AAAEmbedded\GeoradarData\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -27,7 +27,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <TargetCulture>en</TargetCulture>
     <ProductName>GeoradarGui</ProductName>
-    <PublisherName>Vadym Volokitin</PublisherName>
+    <PublisherName>AAAEmbedded</PublisherName>
     <ApplicationRevision>8</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
