--- a/GeoradarGui/App.config
+++ b/GeoradarGui/App.config
@@ -88,6 +88,9 @@
             <setting name="DielectricPermitivity" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="DiffOnOffState" serializeAs="String">
+                <value>False</value>
+            </setting>
         </GeoradarGui.Properties.Settings>
     </userSettings>
 </configuration>
