--- a/GeoradarGui/Properties/Settings.settings
+++ b/GeoradarGui/Properties/Settings.settings
@@ -80,5 +80,8 @@
     <Setting Name="DielectricPermitivity" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="DiffOnOffState" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
